Fixed align of object list table

--- a/css/03_hirarchy.css
+++ b/css/03_hirarchy.css
@@ -1,6 +1,6 @@
 .hirarchy ul {
 	list-style-type:none;
-	float: left;
+	float: top;
 }
 
 .hirarchy li {
